--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 		<title>{{ page.title }}</title>
 		<link href="css/default.css" rel="stylesheet" type="text/css">
 		<link href="css/highlight.css" rel="stylesheet" type="text/css">
-		<link href='images/favicon.ico' rel='shortcut icon' type='image/ico'>
+		<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 		<!--[if lte IE 8]>
 		<script src="http://heihua.github.com/blog/js/html5.js"></script>
 		<![endif]-->　　
