--- a/css/default.css
+++ b/css/default.css
@@ -41,7 +41,6 @@ body{
 	font-size:14px;
 	font-family:Georgia, "Microsoft YaHei", serif;
 	background:#222 url('../images/logo.jpg') no-repeat right 4em;
-	background-size: 32% 32%;
 	color:#fff;
 	position:relative;
 	width:66em;
@@ -159,7 +158,7 @@ h2 a,h3 a {
 	font-size:1.1em
 	}
 }
-.post{padding-top:1em; font-size:16px;}
+.post{padding-top:1em;}
 .post time{ line-height:1.5em;}
 .post li{padding:.2em 0;}
 
